# chongshenng.github.io

./: .gitignore  404.html  Gemfile  README.md  _config.yml  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
TIL/: index.html
_data/: settings.yml
_drafts/: home.md
_includes/: footer.html  head.html
_layouts/: home.html
_posts/: 2020-12-27-publications.md
aboutme/: index.html
assets/css/_sass/: _default.scss  _header.scss  _home.scss  _misc.scss
docs/: TIL.md  aboutme.md  index.md  projects.md  research.md  talks.md
pages/: about.md  contact.md  home.md  projects.md  publications.md  whois.md
projects/: index.html
research/: index.html
search/: search_index.json
stylesheets/: extra.css
talks/: index.html
