[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chongshenng.github.io"
version = "0.1.0"
description = "Chong Shen Ng's personal page"
authors = [
    { name = "Chong Shen Ng", email = "chongshenng@tutanota.com" },
]
dependencies = [
    "mkdocs-material~=9.5.24",
]
requires-python = ">3.11.0"

[tool.hatch.build.targets.wheel]
packages = ["."]
